css/style.css
.clearfix:after{
      content:"";
      display:table;
      clear:both;
}

html, body {
  overflow-x:hidden;
}
body {
  font-family: "NotoSans", Helvetica, Arial, sans-serif;
  color: black;
}
h1, h2, h3, h4, h5, h6 {
  font-family: "NotoSans", Helvetica, Arial, sans-serif;
}
h2 {
  font-size: 28px;
  font-weight: normal;
  margin-bottom: 5px;
}
p {
  font-size: 16px;
  line-height: 19px;
  font-weight: 100;
}

 .title {
  text-align: center;
  font-weight: bold;
  color: #233247;
  font-size: 35px;
  margin: 0px;
 }


/*GRID */
.container {
  margin-right: auto;
  margin-left: auto;
  padding-left: 15px;
  padding-right: 15px;
  position: relative;
}
.container:before,
.container:after {
  content: " ";
  display: table;
}
.container:after {
  clear:both;
}
.one-half, .one-third, .one-fourth {
  width:96%;
  float:left;
  position: relative;
  min-height: 1px;
  margin: 0 2% 20px;
  list-style-type: none;
}

@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width:970px;
  }
  .one-half {
    width:46%;
  }
  .one-third {
    width: 28%;
  }
  .one-fourth {
    width:21%;
  }
}
@media (min-width: 1200px)
  .container {
    width:1170px;
  }
}
/*HERO*/

.resize {
  width: 100px;
  height: auto;
}

.container-hereo {
  text-align: center;
  padding: 15px;
  margin: 5px;
}

/* HEADER */
header {
  color:#FFFFFF;
  background: #34495E;
  background-image: linear-gradient(206deeg, #34495E 0%, #5F81A3 100%);
}
header nav {
  padding:1em 0;
}
header nav ul {
  display:inline;
  text-align: right;
  float:right;
  margin:0;
}
header nav ul > li {
  list-style-type: none;
  display: inline-block;
  margin:0 15px;
}
header nav ul > li.btn-outline {
  padding:10px 15px;
  border:2px solid #FFFFFF;
  border-radius: 4px;
}
header nav ul > li.btn-outline:hover {
  background:#FFFFFF;
}
header nav ul > li > a {
  color:#FFFFFF;
  text-decoration: none;
}
header nav ul > li.btn-outline:hover > a {
  color:#34495E;
}
header .hero {
  text-align: center;
  display:block;
  position: relative;
}
header .hero h1 {
  font-size:48px;
  font-weight: normal;
  margin:10px 0 40px;
}
header .hero p {
  font-size: 22px;
  line-height: 26px;
  font-weight: 100;
  margin:10px 0 40px;
}
header .hero img {
  display: block;
  margin:3em auto 0;
}

/* BUTTONS */
.btn {
  border-radius: 4px;
  color:#FFFFFF;
  font-weight: 700;
  text-decoration: none;
  padding:10px 30px;
  background: #ff6464;
  border:2px solid #ff6464;
  box-shadow: 0px 2px 0px 0px #c35050;

}
/* BENEFIT */

.benefits {
  text-align: center;
}

.benefits h2{
  font-weight: bold;
}

/* PRICING */
.pricing {
   background: #34495E url("../image/Boylabtop.jpg") top center no-repeat;
   background: url("../image/Boylabtop.jpg") top center no-repeat, linear-gradient(206deg, #5F81A3 0%, #34495E 77%);
   background-size:cover;
   text-align: center;
   padding: 8em 0;
 }

 .highlight {
  background-color: black;
  color: white;
  padding: 10px;
  font-weight: bold;
  display: inline;
 }

.pricing h2, .pricing p {
   color:#000000;
 }
 .pricing ul {
   margin:0 auto;
   padding:2em 0;
 }
 .pricing ul li {
   list-style-type: none;
 }

 .box {
   padding:0 15px 15px;
   background: #FFFFFF;
   box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.20);
   min-height: 439px;
   position: relative;
   margin-top: 25px;
 }
 .box.middle {
   min-height: 485px;
   margin-top:0px;
 }
 .box h3 {
   font-family: "NotoSans", Helvetica, Arial, sans-serif;
   font-weight: 600;
   text-transform: uppercase;
   background: #E2E2E2;
   box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.40);
   left:0;
   right:0;
   top:0;
   text-align: center;
   margin:0 -15px 40px;
   padding:10px 0;
 }
.box h4 {
   font-size:50px;
   font-weight: normal;
   margin:40px 0 10px;
   color:#000000;
 }
 .box h4 span {
   font-size:32px;
   vertical-align: top;
 }
 .box h4 span.month {
   font-family: "NotoSans", Helvetica, Arial, sans-serif;
   font-weight: 100;
   color:#888888;
   font-size:20px;
   vertical-align: middle;
 }
 .box ul li {
   font-size:18px;
   margin-bottom:20px;
   font-weight: 100;
 }

 /* TESTIMONIAL */

 .testimonials {
  font-size: 14px;
  text-align: center;
 }

 .testimonials img {
   height: 130px;
   width: 130px;
   border-radius:50%;
   float: center;
   display: inline-block;
   margin:3px 10px 0 0;
   border: 5px solid #5a80b7;
 }
 .testimonials p.name {
   float: center;
   display: inline-block;
   text-align: center;
   font-size:13px;
   margin-top: 8px;
 }

 /* ELEVATE */

 .elevate {
  background: #34495E url("../image/Girllabtop.jpg") top center no-repeat;
   background: url("../image/Girllabtop.jpg") top center no-repeat, linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
   background-size:cover;
   text-align: center;
   font-weight: bold;
   padding:24em 0;
 }

 /* FOOTER */

 footer {
  background-color: #233247;
  color: white;
  height: 120;
  position: relative;
  overflow: hidden;
  z-index: 0;
 }

 footer .copyright-block {
  margin: 20px;
  float: left;
  display: block;
 }

 footer .right-footer-block {
  float: right;
  padding: 5px;
 }

 .top-nav {
  background-color: #233247;
  list-style: none;
  padding: 20px;
}

 @media (min-width: 992px){
  footer {
    text-align: center;
  }
 
 /* DASHBOARD */


.top-nav.open {
   display:block;
   width:800px;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   transform: translate(0,0);
     -webkit-transform: translate(0,0); /** Chrome & Safari **/
     -o-transform: translate(0,0); /** Opera **/
     -moz-transform: translate(0,0); /** Firefox **/
     z-index: 100;
 }
 /*.hamburger {
   position:absolute;
   z-index: 1000;
   background:#34495E;
   color:#FFF;
   text-decoration: none;
   font-size: 22px;
   padding: 10px 15px;
   border-radius: 4px;
   right: 5px;
   top: 15px;
 }
*/
}
.site-logo {
  float: left;
}
.top-nav li:last-child {
    border-right: none;
}

.top-nav li {
  display: inline-block;
  padding: 0 20px;
  color: white;
  font-size: 20px;
  border-right: 1px solid #fff;
}

.top-nav a {
  color: white;
  text-decoration: none;
}

.items {
  float: left;
  padding-top: 15px;
}

.items > li {
  display: inline-block;
  padding: 0 25px 0 25px;
}
/* MEDIA QUERIES */ 

@media (max-width: 768px) {
.top-nav {
    height:100%;
    width:280px;
    color: #FFFFFF;
}
}

/* CONTENT */

.content {
   padding:6em 1% 1.5em;
   float:right;
   width:98%;
   position: relative;
 }
 .content .header {
   margin:0 1% 20px;
 }
 .content .header h1 {
   font-family: "NotoSans", Helvetica, Arial, sans-serif;
   font-weight: 100;
   margin:0 0 30px;
   font-size: 36px;
   color: #3498DB;
   line-height: 44px;
   float: left;
   display:inline-block;
 }
 .content .header > a {
   float:right;
 }
 .content-item {
   width:96%;
   margin:0 2% 25px;
   float:left;
   display:block;
 }
 .item-box {
   display:block;
   height:230px;
   background: #FFFFFF;
   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
   position: relative;
   overflow: hidden;
   padding:20px;
 }
 /* Larger Mobile Devices */
 @media (min-width:460px) {
   .content {
     padding:1.5em 1%;
     float:left;
     width:90%;
     position: relative;
   }
   .content-item {
     width:46%;
     margin:0 2% 25px;
     float:left;
     display:block;
   }
 }
/* Tablets */
 @media (min-width:768px) {
   .content {
     padding:1.5em 5%;
     float:left;
     width:90%;
     position: relative;
   }
   .content > .container {
     width:700px;
   }
   .content-item {
     width:31.33333%;
     margin:0 1% 25px;
   }
 }
/* Laptops and Desktops */
 @media (min-width:992px) {
   .content {
    float:left;
    position: relative;
   }
   .content > .container {
     width:auto;
   }
   .content-item {
     width:23%;
     margin:0 1% 25px;
   }
 }



 .item-box > img {
   position:absolute;
   height:100%;
   width:auto;
   top:0;
   left:0;
   right:0;
 }
 .item-box h2 {
   font-family: 'Lato', Helvetica, Arial, sans-serif;
   font-weight: 700;
   font-size: 15px;
   line-height: 17px;
   margin:0;
 }
 .item-box h2 a {
   color: #3498DB;
   text-decoration: none;
 }
 .item-box h2 img {
   width:16px;
   height:16px;
   position:relative;
   top:2px;
   margin-right:5px;
 }
 .item-box p {
   font-size: 14px;
   color: #333333;
   line-height: 18px;
   margin:5px 0 0;
 }

 /* FOOTER */

 .bottom-avatar {
  position:absolute;
   background:#22303E;
   width:100%;
   bottom:0;
   left:0;
   right:0;
   padding:5px 0;  
 }

 .bottom-avatar img {
   height:50px;
   width:50px;
   border-radius: 50%;
   margin-left:10px;
   display: inline-block;
 }

.bottom-avatar p {
  display: inline-block;
  color: white;
  vertical-align: top;
  padding-top: 8px;
  font-size: 1em;
  margin:5px 0 0 10px;
 }

 .bottom-avatar a {
  color:#FFFFFF;
  display: inline-block;
  vertical-align: top;
  padding-top: 8px;
  margin:5px 0 0 10px;
}

/* hamburger style example */

 @media (min-width:992px) { /* big screens */
  .main-navigation .fa-bars {
    display: none;
  }

  .main-navigation ul li {
    display: inline-block;
  }

 }

  @media (max-width: 992px) {
    .main-navigation .fa-bars {
      display: block;
    }

   

    .main-navigation ul li {
      display: block;
    }


  }

